deploy/kubernetes_manifests/product_name/api/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: product-name-api
  labels:
    target: product-name
    component: api
spec:
  selector:
    target: product-name
    component: api
  ports:
  - name: http
    port: 4567
    protocol: TCP
