deploy/kubernetes_manifests/product_name/api/test_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: test-product-name-api
  labels:
    target: product-name
    component: api
spec:
  selector:
    target: product-name
    component: api
  type: LoadBalancer
  ports:
  - name: http
    port: 8081
    targetPort: 4567
    protocol: TCP
