deploy/kubernetes_manifests/product_name/api/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-name-api
  labels:
    target: product-name
    component: api
spec:
  rules:
  - host: product-name.localhost
    http:
      paths:
      - backend:
          service:
            name: product-name-api
            port: 
              name: http
        path: /
        pathType: Prefix
